add logout api
