# routes/users.js
@@ -11,4 +11,6 @@ router.post('/sign_up', ctrl_users.sign_up)
 
 router.post('/sign_in', ctrl_users.sign_in)
 
+router.post('/logout', ctrl_users.logout)
+
 module.exports = router
